--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,7 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
+ 
 .App-header {
   background-color: #fafafa;
   min-height: 100vh;
@@ -19,15 +14,10 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+ .list-item{
+	 
+ }
+ 
+ .list-box{
+	 background-color:grey;
+ }
